# iotcloud

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  bootstrap-cloud-run-iotcloud.sh  cloudbuild.yaml  curl.sh  deploy.sh  env.sh  go.mod  iotcloud.cc  iotcloud_session_handler.cc  iotcloud_session_handler.hpp  main.go  makefile  netmem.sh  readme.md  vcpkg.json
config/: iot.json
design/: README.md  STATEFRAMEWORK.md
deviceserver/: CMakeLists.txt  deviceserver.cc  iotserverevent.cc
deviceserver/include/: devicemanager.hh  devices.hh  httpfilewatcher.hh  iotfilemapping.hh  iothttpevent.hh  iothttphelper.hh  iotserverevent.hh  version.h  version.h.in
deviceserver/lib/: devices.cc  iotfilemapping.cc  iothttpevent.cc  iothttphelper.cc  iotserverevent.cc
httpparser/: CMakeLists.txt  curlcall.sh  http11.cc  http11.hh  http11.l  http11.yy  http11driver.cc  http11driver.hh  http11scanner.hh  makefile  simpleserver.cc
httpparser/include/: hpack.hh  http11.hh  http11driver.hh  http11scanner.hh  http2.hh
httpparser/lib/: hpack.cc  http11.cc  http11driver.cc  http2.cc
httpserver/: curlcall.sh  http11.cc  http11.hh  http11.l  http11.tab.cc  http11.tab.hh  http11.yy  http11driver.cc  http11driver.hh  http11scanner.hh  lex.yy.cc  lex.yy.hh  location.hh  simpleserver
httpserver/httpparser/: CMakeLists.txt  http11.cc  http11.hh  http11.l
key/: keygen.sh  testcert.pem
logreader/: CMakeLists.txt  logreader.cc
resources/config/: iot.json
resources/design/: CLOUD.md  LOG.md  STATEFRAMEWORK.md  protocol.md
resources/key/: keygen.sh  readme.md
resources/key/ec/: ec_keypair_bit256.pem  ec_public_bit256.pem
resources/sql/: init.sql
resources/www/: about.html  index.html
samples/google_run_go/: curl.sh  deploy.sh  go.mod  go.sum  main.go
serverconfig/: CMakeLists.txt  serverconfig.cc
serverlib/: .gitignore  CMakeLists.txt  client.cc  makefile  server.cc  server.hh  test.cc  test.hh  testcommon  testipv6addr
serverlib/include/: iotclouderror.hh  iotcloudmath.hh  iotcloudtypes.hh  iotcloudvaradic.hh  iotmessage.hh  log.hh  server.hh  serversocket.hh  socket.hh
serverlib/include/iot/: init.hh  iotserverevent.hh  log.hh  math.hh  message.hh  serversocket.hh  socket.hh
serverlib/include/iot/config/: message.hh
serverlib/include/iot/core/: bits.hh  config.hh  configparser.hh  conversion.hh  error.hh  guid.hh  ipv6addr.hh  log.hh  log_entry.hh  math.hh  memory.hh  memory_helper.hh  pthread_helper.hh  types.hh  varadic.hh  version.h  version.h.in
serverlib/include/iot/net/: serverevent.hh  serversocket.hh  socket.hh
serverlib/include/iot/security/: crypto.hh
serverlib/include/iot/states/: event_distributor.hh  states.hh  statesentry.hh
serverlib/include/iot/watcher/: filewatcherevent.hh  helperevent.hh
serverlib/lib/: init.cc  iotclouderror.cc  iotmessage.cc  log.cc  memory_helper.cc  message.cc  serversocket.cc
serverlib/lib/core/: configparser.cc
serverlib/lib/memory/: memory.cc
serverlib/lib/net/: iotserverevent.cc  serverevent.cc  socket.cc
serverlib/lib/security/: crypto.cc
serverlib/lib/states/: event_distributor.cc
serverlib/test/: test.cc  test.hh  testipv6addr.cc  testmemory.cc
test/deviceclient/: CMakeLists.txt  deviceclient.cc  deviceclient.hh
test/httpparser/: CMakeLists.txt  httpparsertest.cc
test/serverlib/: CMakeLists.txt  client.cc  client_ssl.cc  serverlib  testcommon.cc  testcrypto.cc  testipv6addr.cc  testlog.cc  testmemory.cc
test/serverlib/include/: testserver.hh
